--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -64,87 +64,89 @@ else
 }
 
 @code {
-        List<Usuarios> Lista = new List<Usuarios>();
+    List<Usuarios> Lista = new List<Usuarios>();
 
-        protected override void OnInitialized()
+    UsuariosControllers usuariocontroller = new UsuariosControllers();
+
+    protected override void OnInitialized()
+    {
+        Lista = usuariocontroller.GetList(A => true);
+    }
+
+
+    private string filtro;
+    private string Criterio;
+    private bool fechaFiltro;
+
+    DateTime hastaFecha = DateTime.Now;
+    DateTime desdeFecha = DateTime.Now;
+
+    public List<Usuarios> listado { get; set; }
+
+    private void filtradoPorFecha()
+    {
+        try
         {
-            Lista = usuariocontroller.GetList(A => true);
+            Lista = Lista.Where(p => p.FechaIngreso >= desdeFecha && p.FechaIngreso <= ).ToList();
+        }
+        catch (Exception)
+        {
+
+            //wey klok
         }
 
+    }
 
-        private string filtro;
-        private string Criterio;
-        private bool fechaFiltro;
+    private void Filtrar()
+    {
 
-        DateTime hastaFecha = DateTime.Now;
-        DateTime desdeFecha = DateTime.Now;
-
-        public List<Usuarios> listado { get; set; }
-
-        private void filtradoPorFecha()
+        try
         {
-            try
+            int filtroIndex = Int32.Parse(filtro);
+
+            if (Criterio.Trim().Length > 0)
             {
-                Lista = Lista.Where(p => p.FechaIngreso >= desdeFecha && p.FechaIngreso <= ).ToList();
+                switch (filtroIndex)
+                {
+                    //Todos
+                    case 0:
+                        listado = usuariocontroller.GetList(p => true);
+                        Lista = listado;
+                        break;
+                    //Id
+                    case 1:
+                        int id = 0;
+                        if (int.TryParse(Criterio, out id))
+                        {
+                            id = Convert.ToInt32(Criterio);
+                            listado = usuariocontroller.GetList(p => p.UsuarioId == id);
+                            Lista = listado;
+                        }
+                        break;
+                    //Nombre
+                    case 2:
+                        listado = usuariocontroller.GetList(p => p.NombrePersona.Contains(Criterio));
+                        Lista = listado;
+                        break;
+                    //Email
+                    case 3:
+                        listado = usuariocontroller.GetList(p => p.EmailUsuario.Contains(Criterio));
+                        Lista = listado;
+                        break;
+                    //NivelUsuario
+                    case 4:
+                        listado = usuariocontroller.GetList(p => p.NivelUsuario.Contains(Criterio));
+                        Lista = listado;
+                        break;
+                }
             }
-            catch (Exception)
+            else
             {
 
-                //wey klok
+                listado = usuariocontroller.GetList(p => true);
+                Lista = listado;
             }
-
         }
-
-        private void Filtrar()
-        {
-
-            try
-            {
-                int filtroIndex = Int32.Parse(filtro);
-
-                if (Criterio.Trim().Length > 0)
-                {
-                    switch (filtroIndex)
-                    {
-                        //Todos
-                        case 0:
-                            listado = usuariocontroller.GetList(p => true);
-                            Lista = listado;
-                            break;
-                        //Id
-                        case 1:
-                            int id = 0;
-                            if (int.TryParse(Criterio, out id))
-                            {
-                                id = Convert.ToInt32(Criterio);
-                                listado = usuariocontroller.GetList(p => p.UsuarioId == id);
-                                Lista = listado;
-                            }
-                            break;
-                        //Nombre
-                        case 2:
-                            listado = usuariocontroller.GetList(p => p.NombrePersona.Contains(Criterio));
-                            Lista = listado;
-                            break;
-                        //Email
-                        case 3:
-                            listado = usuariocontroller.GetList(p => p.EmailUsuario.Contains(Criterio));
-                            Lista = listado;
-                            break;
-                        //NivelUsuario
-                        case 4:
-                            listado = usuariocontroller.GetList(p => p.NivelUsuario.Contains(Criterio));
-                            Lista = listado;
-                            break;
-                    }
-                }
-                else
-                {
-                
-                    listado = usuariocontroller.GetList(p => true);
-                    Lista = listado;
-                }
-            }
         }
         catch (Exception)
         {
