--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
@@ -60,7 +60,7 @@
                     <td>@item.ProductoId</td>
                     <td>@item.Nombre</td>
                     <td>@item.Cantidad</td>
-                    <td>@item.FechaEntrada</td>
+                    <td>@item.FechaEntrada.ToString("dd/MM/yyyy")</td>
                     <td>@item.PrecioCompra</td>
                     <td>@item.PorcentajeGanancias</td>
                     <td>@item.PrecioVentas</td>
