--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -55,7 +55,7 @@ else
                     <td>@item.NombrePersona</td>
                     <td>@item.EmailUsuario</td>
                     <td>@item.NivelUsuario</td>
-                    <td>@item.FechaIngreso</td>
+                    <td>@item.FechaIngreso.ToString("dd/MM/yyyy")</td>
                     <td><a class="btn btn-outline-info" href="Usuarios/@item.UsuarioId">Ver</a></td>
                 </tr>
             }
