--- a/ProyectoFinal-Aplicada2/Pages/ConultaVentas.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConultaVentas.razor
@@ -53,7 +53,7 @@ else
             {
                 <tr>
                     <td>@item.VentaId</td>
-                    <td>@item.FechaVenta</td>
+                    <td>@item.FechaVenta.ToString("dd/MM/yyyy")</td>
                     <td>@item.Total</td>
 
                     <td><a class="btn btn-outline-info" href="Ventas/@item.VentaId">Ver</a></td>
