--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -20,4 +20,6 @@
 @using Blazored.Toast.Configuration
 @using ProyectoFinal_Aplicada2.Data;
 @inject IToastService toastService
+@using ProyectoFinal_Aplicada2.Helpers;
+@using ProyectoFinal_Aplicada2.Paginacion;
 
