--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">ProyectoFinal-Aplicada2</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -6,79 +7,77 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
+        <ul class="nav flex-column">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </li>
 
-        @*Registros*@
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Usuarios/0">
-                <span class="oi oi-plus" aria-hidden="true"></span> Usuarios
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Productos/0">
-                <span class="oi oi-plus" aria-hidden="true"></span> Productos
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Proveedores/0">
-                <span class="oi oi-plus" aria-hidden="true"></span> Proveedores
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Compras/0">
-                <span class="oi oi-plus" aria-hidden="true"></span> Compra
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Ventas/0">
-                <span class="oi oi-plus" aria-hidden="true"></span> Ventas
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Pagos/0">
-                <span class="oi oi-plus" aria-hidden="true"></span> Pagos
-            </NavLink>
-        </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Usuarios/0">
+                    <span class="oi oi-plus" aria-hidden="true" ></span> Usuarios
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Productos/0">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Productos
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Proveedores/0">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Proveedores
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Compras/0">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Compra
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Ventas/0">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Ventas
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Pagos/0">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Pagos
+                </NavLink>
+            </li>
 
-        @*Consultas*@
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaUsuarios">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Usuarios
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaProductos">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Productos
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaProveedores">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta proveedores
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaCompras">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Compras
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaVentas">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Ventas
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaPagos">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Pagos
-            </NavLink>
-        </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="ConsultaUsuarios">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Usuarios
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="ConsultaProductos">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Productos
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="ConsultaProveedores">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta proveedores
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="ConsultaCompras">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Compras
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="ConsultaVentas">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Ventas
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="ConsultaPagos">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Pagos
+                </NavLink>
+            </li>
 
-    </ul>
-</div>
+        </ul>
+    </div>
 
 @code {
     private bool collapseNavMenu = true;
