--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProveedores.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProveedores.razor
@@ -1,4 +1,5 @@
 ﻿@page "/ConsultaProveedores"
+    <h3>Consulta de Proveedores</h3>
 
 <div class="form-row">
     <div class="col">
@@ -19,7 +20,6 @@
     </div>
 </div>
 
-<h3>Consulta de Proveedores</h3>
 @if (Lista == null)
 {
     <p>No hay datos</p>
@@ -27,7 +27,7 @@
 else
 {
     <table class="table">
-        <thead>
+        <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
