--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -1,34 +1,37 @@
 ﻿@page "/ConsultaUsuarios"
 
-<div class="form-row">
+    <h3>Consulta de Usuario</h3>
+    <div class="row">
+        <div class="col">
+            <input id="desde_date" class="form-control" type="datetime-local" @bind="desdeFecha" />
+            <label for="desde_date">Desde</label>
+        </div>
+        <div class="col">
+            <input id="hasta_date" class="form-control" type="datetime-local" @bind="hastaFecha" />
+            <label for="hasta_date">Hasta</label>
+        </div>
 
-    <div class="col">
-        <label for="desde_date">Desde:</label>
-        <input id="desde_date" class="form-control" type="datetime-local" @bind="desdeFecha" />
+        <div class="col">
+            <button class="btn btn-primary" id="filtar_buton" @onclick="filtradoPorFecha">Filtar por Fecha</button>
+        </div>
+
+        <div class="col">
+            <input type="text" id="filtar" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
+        </div>
+
+        <div class="col">
+            <select class="form-control" id="filtro_select" @onclick="Filtrar" @bind="filtro">
+                <option value="0">Todos</option>
+                <option value="1">Id</option>
+                <option value="2">Nombre</option>
+                <option value="3">Email</option>
+                <option value="4">Nivel de Usuario</option>
+            </select>
+        </div>
     </div>
+<br />
+<br />
 
-    <div class="col">
-        <label for="hasta_date">Hasta:</label>
-        <input id="hasta_date" class="form-control" type="datetime-local" @bind="hastaFecha" />
-        <button class="btn btn-primary" @onclick="filtradoPorFecha">Filtar por Fecha</button>
-    </div>
-
-    <div class="col">
-        <input type="text" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
-    </div>
-
-    <div class="col">
-        <select class="form-control" @onclick="Filtrar" @bind="filtro">
-            <option value="0">Todos</option>
-            <option value="1">Id</option>
-            <option value="2">Nombre</option>
-            <option value="3">Email</option>
-            <option value="4">Nivel de Usuario</option>
-        </select>
-    </div>
-</div>
-
-<h3>Consulta de Usuario</h3>
 @if (Lista == null)
 {
     <p>No hay datos que mostrar</p>
@@ -37,7 +40,7 @@
 else
 {
     <table class="table">
-        <thead>
+        <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
@@ -82,14 +85,14 @@ else
 
     public List<Usuarios> listado { get; set; }
 
-        private void filtradoPorFecha()
+    private void filtradoPorFecha()
+    {
+        try
         {
-            try
-            {
-                Lista = Lista.Where(p => p.FechaIngreso >= desdeFecha && p.FechaIngreso <= p.FechaIngreso).ToList();
-            }
-            catch (Exception)
-            {
+            Lista = Lista.Where(p => p.FechaIngreso >= desdeFecha && p.FechaIngreso <= p.FechaIngreso).ToList();
+        }
+        catch (Exception)
+        {
 
             //wey klok
         }
@@ -103,52 +106,52 @@ else
         {
             int filtroIndex = Int32.Parse(filtro);
 
-                if (Criterio.Trim().Length > 0)
-                {
-                    switch (filtroIndex)
-                    {
-                        //Todos
-                        case 0:
-                            listado = usuariocontroller.GetList(p => true);
-                            Lista = listado;
-                            break;
-                        //Id
-                        case 1:
-                            int id = 0;
-                            if (int.TryParse(Criterio, out id))
-                            {
-                                id = Convert.ToInt32(Criterio);
-                                listado = usuariocontroller.GetList(p => p.UsuarioId == id);
-                                Lista = listado;
-                            }
-                            break;
-                        //Nombre
-                        case 2:
-                            listado = usuariocontroller.GetList(p => p.NombrePersona.Contains(Criterio));
-                            Lista = listado;
-                            break;
-                        //Email
-                        case 3:
-                            listado = usuariocontroller.GetList(p => p.EmailUsuario.Contains(Criterio));
-                            Lista = listado;
-                            break;
-                        //NivelUsuario
-                        case 4:
-                            listado = usuariocontroller.GetList(p => p.NivelUsuario.Contains(Criterio));
-                            Lista = listado;
-                            break;
-                    }
-                }
-                else
-                {
-
-                    listado = usuariocontroller.GetList(p => true);
-                    Lista = listado;
-                }
-            }        
-            catch (Exception)
+            if (Criterio.Trim().Length > 0)
             {
-                //algo
+                switch (filtroIndex)
+                {
+                    //Todos
+                    case 0:
+                        listado = usuariocontroller.GetList(p => true);
+                        Lista = listado;
+                        break;
+                    //Id
+                    case 1:
+                        int id = 0;
+                        if (int.TryParse(Criterio, out id))
+                        {
+                            id = Convert.ToInt32(Criterio);
+                            listado = usuariocontroller.GetList(p => p.UsuarioId == id);
+                            Lista = listado;
+                        }
+                        break;
+                    //Nombre
+                    case 2:
+                        listado = usuariocontroller.GetList(p => p.NombrePersona.Contains(Criterio));
+                        Lista = listado;
+                        break;
+                    //Email
+                    case 3:
+                        listado = usuariocontroller.GetList(p => p.EmailUsuario.Contains(Criterio));
+                        Lista = listado;
+                        break;
+                    //NivelUsuario
+                    case 4:
+                        listado = usuariocontroller.GetList(p => p.NivelUsuario.Contains(Criterio));
+                        Lista = listado;
+                        break;
+                }
+            }
+            else
+            {
+
+                listado = usuariocontroller.GetList(p => true);
+                Lista = listado;
             }
         }
+        catch (Exception)
+        {
+            //algo
+        }
+    }
 }
