Validaciones y arreglos de diseños

--- a/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
@@ -62,7 +62,7 @@
                         <option value="@item.CompraId">@item.DescripcionCompra</option>
                     }
                 </InputSelect>
-                <button type="button" class="btn btn-outline-primary" @onclick="AgregarCompra" @onchange="CalcularPagoTotal">Agregar</button>
+                <button type="button" class="btn btn-info" @onclick="AgregarCompra" @onchange="CalcularPagoTotal">Agregar</button>
             </div>
 
             <div class="col">
