--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -69,8 +69,8 @@
         </div>
 
         <div class="form-group">
-            <label for="NivelUsuario_text" class="form-control">Nivel de Usuario</label>
-            <InputSelect class="form-control" @bind-Value="@usuarios.NivelUsuario">
+            <label for="nivelusuario" class="form-control">Nivel de Usuario</label>
+            <InputSelect id="nivelusuario" class="form-control" @bind-Value="@usuarios.NivelUsuario">
                 <option value="Administrador">Administrador</option>
                 <option value="Contador">Contador</option>
                 <option value="Cajero">Cajero</option>
