--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -14,7 +14,7 @@
         background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
         padding: 30px;
         margin: auto;
-        margin-top: 100px;
+        margin-top: 50px;
         border-radius: 4px;
         font-family: 'calibri';
         color: white;
@@ -69,7 +69,7 @@
         </div>
 
         <div class="form-group">
-            <label for="nivelusuario" class="form-control">Nivel de Usuario</label>
+            <label for="nivelusuario" >Nivel de Usuario</label>
             <InputSelect id="nivelusuario" class="form-control" @bind-Value="@usuarios.NivelUsuario">
                 <option value="Administrador">Administrador</option>
                 <option value="Contador">Contador</option>
