--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -21,5 +21,5 @@
 @using ProyectoFinal_Aplicada2.Data;
 @inject IToastService toastService
 @using ProyectoFinal_Aplicada2.Helpers;
-@using ProyectoFinal_Aplicada2.Paginacion;
+@using ProyectoFinal_Aplicada2.Paginando;
 
